added comments to files

--- a/10_occ/templates/_base.html
+++ b/10_occ/templates/_base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <center>
-    <h1>SoftDev - 10_occ</h1>
+    <h1>SoftDev - 10_occ</h1> <!-- base template, contains heading -->
     <h5>Team France: Ivan Galakhov, Jackie Lin</h5>
     {% block content %}
     {% endblock content %}
