--- a/15_login/templates/welcome.html
+++ b/15_login/templates/welcome.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Error </title>
+    <title> Welcome! </title>
   </head>
   <body>
     <p>
-      
+      Welcome {{ username }}! Thanks for logging in!
     </p>
   </body>
 </html>
