--- a/16_flasherit/templates/form.html
+++ b/16_flasherit/templates/form.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Login Form</title>
-  </head>
-  <body>
-    <form action = "/auth">
-      Username: <input type="text" name = "username"><br>
-      Password: <input type="password" name = "password"><br>
-      <input type="submit" name ="login">
-    </form>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+Login Form
+{% endblock title %}
+
+{% block body %}
+<form action = "/auth">
+  Username: <input type="text" name = "username"><br>
+  Password: <input type="password" name = "password"><br>
+  <input type="submit" name ="login">
+</form>
+{% endblock body %}
