--- a/16_flasherit/templates/welcome.html
+++ b/16_flasherit/templates/welcome.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title> Welcome! </title>
-  </head>
-  <body>
-    <p>
-      Welcome {{ user }}! Thanks for logging in!
-    </p>
-    <form action="/logout">
-      <input type="submit" name="logout" value="Logout">
-    </form>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+Welcome!
+{% endblock %}
+
+{% block body %}
+<p>
+  Welcome {{ user }}! Thanks for logging in!
+</p>
+<form action="/logout">
+  <input type="submit" name="logout" value="Logout">
+</form>
+{% endblock %}
