finished editing base template

--- a/16_flasherit/templates/base.html
+++ b/16_flasherit/templates/base.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html>
+  {% block header %}
   <head>
-    <title> {% block title %} {% endblock title %}</title>
+    <title> {% block title %} {% endblock %}</title>
   </head>
-  <body>
-    {% block body %}
-    {% endblock body %}
+  {% endblock %}
 
-    {% block footer %}
+  <body>
+  {% block content %}
+  {% endblock %}
+
+  {% block footer %}
     <p>
       &copy; Copyright 2019 by Michael and Jackie
     <p>
-    {% endblock footer %}
+  {% endblock %}
 
   </body>
+
 </html>
