--- a/16_flasherit/templates/form.html
+++ b/16_flasherit/templates/form.html
@@ -2,12 +2,12 @@
 
 {% block title %}
 Login Form
-{% endblock title %}
+{% endblock %}
 
-{% block body %}
+{% block content %}
 <form action = "/auth">
   Username: <input type="text" name = "username"><br>
   Password: <input type="password" name = "password"><br>
   <input type="submit" name ="login">
 </form>
-{% endblock body %}
+{% endblock %}
