--- a/16_flasherit/templates/welcome.html
+++ b/16_flasherit/templates/welcome.html
@@ -5,6 +5,12 @@ Welcome!
 {% endblock %}
 
 {% block content %}
+<p style="color:red">
+  {% set msgs = get_flashed_messages() %}
+  {% for msg in msgs %}
+    {{ msg }}
+  {% endfor %}
+</p>
 <p>
   Welcome {{ user }}! Thanks for logging in!
 </p>
