fixed ssl certificate problem

--- a/24_rest/templates/index.html
+++ b/24_rest/templates/index.html
@@ -5,6 +5,8 @@
     <title>NASA API</title>
   </head>
   <body>
-    {{ pic }}
+
+    <img src="{{ pic }}" /><br>
+    Here lies a picture of the Oculus, procured from NASA.
   </body>
 </html>
