used different picture

--- a/24_rest/templates/index.html
+++ b/24_rest/templates/index.html
@@ -7,6 +7,6 @@
   <body>
 
     <img src="{{ pic }}" /><br>
-    Here lies a picture of the Oculus, procured from NASA.
+    {{ desc }}
   </body>
 </html>
