added new route for omdb api

--- a/25_restrio/templates/main.html
+++ b/25_restrio/templates/main.html
@@ -5,10 +5,10 @@
     <title>API Fun</title>
   </head>
   <body>
-    HELLO WORLD! <br><br>
-    Click the links below to view requests from each API:
+    <b>HELLO WORLD!</b><br><br>
+    <i>Click the links below to view requests from each API:</i><br>
     <a href="/darksky">Dark Sky</a><br>
-    <a href="/">Blank</a><br>
+    <a href="/omdb">OMDB</a><br>
     <a href="/">Blank</a><br>
 
   </body>
