added third API

--- a/25_restrio/templates/main.html
+++ b/25_restrio/templates/main.html
@@ -9,7 +9,7 @@
     <i>Click the links below to view requests from each API:</i><br>
     <a href="/darksky">Dark Sky</a><br>
     <a href="/omdb">OMDB</a><br>
-    <a href="/">Blank</a><br>
+    <a href="/countries">Countries</a><br>
 
   </body>
 </html>
