added in Tiffany's contributions

--- a/25_restrio_dimsum/templates/main.html
+++ b/25_restrio_dimsum/templates/main.html
@@ -10,6 +10,8 @@
     <a href="/darksky">Dark Sky</a><br>
     <a href="/omdb">OMDB</a><br>
     <a href="/countries">Countries</a><br>
-
+    <a href="/addressautocomplete">USPS Address Autocomplete</a><br>
+    <a href="/airquality">Global Air Quality</a><br>
+    <a href="/trivia">Open Trivia</a><br>
   </body>
 </html>
