--- a/11_mongoflask/templates/history.html
+++ b/11_mongoflask/templates/history.html
@@ -6,7 +6,39 @@
   <input class="form-control" type="text" name="place">
   <input class="btn btn-dark" type="submit" name="submit">
 </form>
-{% for item in event %}
-  {{item['description']}}
+{% for item in place %}
+  <b>Description: </b> {{item['description']}}
+  <br><br>
 {% endfor %}
+
+<form action="/history">
+  Find all events from year:
+  <input class="form-control" type="number" name="year" max="2020">
+  <input class="btn btn-dark" type="submit" name="submit">
+</form>
+{% for item in year %}
+  <b>Description: </b> {{item['description']}}
+  <br><br>
+{% endfor %}
+
+<form action="/history">
+  Find all events from topic:
+  <input class="form-control" type="text" name="topic">
+  <input class="btn btn-dark" type="submit" name="submit">
+</form>
+{% for item in place %}
+  <b>Description: </b> {{item['description']}}
+  <br><br>
+{% endfor %}
+
+<form action="/history">
+  Find all events from keyword:
+  <input class="form-control" type="text" name="keyword">
+  <input class="btn btn-dark" type="submit" name="submit">
+</form>
+{% for item in place %}
+  <b>Description: </b> {{item['description']}}
+  <br><br>
+{% endfor %}
+
 {% endblock %}
